[tool.poetry]
name = "arl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.8"
gym = {extras = ["accept-rom-license", "atari", "other"], version = "^0.26.2"}
torch = "^2.2.1"
msgpack = "^1.0.8"
tensorboard = "^2.16.2"
pygame = "^2.5.2"
torchvision = "^0.17.1"
jupyter = "^1.0.0"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
